style: fix page layout shift when privy modal opens

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
-  width: 100vw;
+  scrollbar-gutter: stable;
 }
 
 body {
